ghost/ghost.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost
  namespace: ghost
  labels:
    app: ghost
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ghost
  template:
    metadata:
      labels:
        app: ghost
    spec:
      containers:
      - name: ghost
        image: ghost:3-alpine
        ports:
        - containerPort: 2368
        resources:
          limits:
            memory: "100Mi"
            cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: ghost-service
  namespace: ghost
spec:
  selector:
    app: ghost
  externalName: ghost-service.ghost.svc.cluster.local
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 2368
